# gds2py

./: CMakeLists.txt  GDSCADConfig.h.in  containers.cpp  containers.hpp  gds2py.py  gdsfile.cpp  gdsfile.hpp  shapes.cpp  shapes.hpp
